##Text encoding: utf-8

2009-08-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: request gnumeric 1.9.10 to build the gnumeric plugin.
	* gnumeric/functions.cc: fixed function description according to new API.
	* plugins/loaders/cdx/cdx.cc: export color table.
	* plugins/loaders/cdxml/cdxml.cc: ditto.

2009-08-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/bezier-arrow.cc: implement drawing.
	* libs/gccv/bezier-arrow.h: ditto.
	* libs/gccv/text.cc: fix unicode keyboard input.
	* libs/gccv/text.h: ditto.
	* libs/gcp/tool.cc: ditto.
	* libs/gcp/tool.h: ditto.
	* libs/gcp/view.cc: ditto.
	* plugins/loaders/cdxml/cdxml.cc: use xmlDoc instead of GsfXML.
	* plugins/paint/arrows/curvedarrowtool.cc: create a bezier arrow on click.
	* plugins/paint/text/fragmenttool.cc: fix unicode keyboard input.
	* plugins/paint/text/texttool.cc: ditto.
	* plugins/paint/text/texttool.h: ditto.
	* programs/spectra/window.cc: fix a memory leak.

2009-08-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* gnumeric/functions.cc: make documentation more gnumeric compliant.
	* libs/gcp/theme.cc: fixed localization in themes.
	* plugins/paint/wikipedia/wikipediatool.cc: reimplemented.
	* themes/paint/Wikipedia: fixed localization in themes.

2009-08-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text-tag.cc: add a comment.
	* libs/gccv/text.cc: don't set the color by default.
	* libs/gcp/fragment.cc: reimplement charge.
	* plugins/paint/atoms/chargetool.cc: fully reimplemented.
	* plugins/paint/atoms/chargetool.h: ditto.

2009-08-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add domainname to gnumeric/plugin.xml.
	* gnumeric/functions.cc: ditto, and move function help to new API.
	* gnumeric/plugin.xml.in: add domainname to gnumeric/plugin.xml.
	* gnumeric/plugin.xml.in.in: ditto.
	* libs/gcp/fragment.cc: more reimplementation.
	* libs/gcu/crystaldoc.cc: delete duplicate atoms from definition.
